<resources>
    <array name="interestsEN">
        <item>climbing</item>
        <item>diving</item>
        <item>cycling</item>
        <item>walking</item>
        <item>restaurants</item>
        <item>desert-adventure</item>
        <item>religion</item>
        <item>nature</item>
        <item>historical</item>
        <item>treatment</item>
        <item>camping</item>
        <item>sightseeing</item>
        <item>culture</item>
        <item>swimming</item>
        <item>desert</item>
        <item>Lahore</item>
        <item>Karachi</item>
        <item>Multan</item>
        <item>Islamabad</item>
        <item>Quetta</item>
        <item>Peshawar</item>
        <item>Sialkot</item>
        <item>Bahawalpur</item>
        <item>Faisalabad</item>
        <item>Sargodha</item>
        <item>Hyderabad</item>
        <item>Chakwal</item>
        <item>Mardan</item>
        <item>Mansehra</item>
        <item>Rawalpindi</item>
    </array>
    <array name="interestsAR">
        <item>التسلق</item>
        <item>غوص</item>
        <item>ركوب الدراجات</item>
        <item>المشي</item>
        <item>مغامرة الصحراء</item>
        <item>مطاعم</item>
        <item>ديني</item>
        <item>طبيعة</item>
        <item>تاريخي</item>
        <item>علاج</item>
        <item>تخييم</item>
        <item>معالم المدينة</item>
        <item>حضاره</item>
        <item>سباحة</item>
        <item>صحراء</item>
        <item>لاهور</item>
        <item>كراتشي</item>
        <item>ملتان</item>
        <item>اسلام آباد</item>
        <item>كويتا</item>
        <item>بيشاور</item>
        <item>سيالكوت</item>
        <item>باهاوالبور</item>
        <item>فيصل أباد</item>
        <item>سارجودا</item>
        <item>حيدر أباد</item>
        <item>شاكوال</item>
        <item>ماردان</item>
        <item>مانسيهرا</item>
        <item>روالبندي</item>
    </array>
    <array name="interestsUR">
        <item>چڑھائی</item>
        <item>غوطہ خوری</item>
        <item>سائیکلنگ</item>
        <item>سیر</item>
        <item>ریستوراں</item>
        <item>صحرائی مہم جوئی</item>
        <item>مذہب</item>
        <item>فطرت</item>
        <item>تاریخی</item>
        <item>علاج</item>
        <item>کیمپنگ</item>
        <item>سیر و تفریح</item>
        <item>ثقافت</item>
        <item>تیراکی</item>
        <item>صحرا</item>
        <item>لاہور</item>
        <item>کراچی</item>
        <item>ملتان</item>
        <item>اسلام آباد</item>
        <item>کوئٹہ</item>
        <item>پشاور</item>
        <item>سیالکوٹ</item>
        <item>بہاولپور</item>
        <item>فیصل آباد</item>
        <item>سرگودھا</item>
        <item>حیدرآباد</item>
        <item>چکوال</item>
        <item>مردان</item>
        <item>مانسہرہ</item>
        <item>راولپنڈی</item>
    </array>
    <string name="app_name">Resorting App</string>
    <string name="login_welcome">"Welcome"</string>
    <string name="login_description">"the best way to navigate through\nPakistan and discover new places."</string>
    <string name="login_continue">continue with :</string>

    <string name="save_interests">Save</string>
    <string name="clear_interests">Clear</string>

    <string name="save">You\'ve saved your Interests successfully</string>

    <string name="save_size_check">please pick one interest atleast !!</string>
    <string name="save_size_check2">pick a new/another interest before saving !!</string>


    <string name="notification">Notification</string>
    <string name="notification_on">Notification Enabled</string>
    <string name="notification_off">Notification Disabled</string>

    <string name="close">Press again to Quit </string>
    <string name="retry">Retry</string>
    <string name="lost_internet">internet connection lost.</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
AIzaSyCzv-i58bJvB7RbpmPnX2S0BBU5_PxqJ3A</string>

    <string name="facebook_application_id" translatable="false">423812995143662</string>
    <!-- Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb423812995143662</string>
    <string name="select_places">Select Places:</string>
    <!-- Strings for the (drawer_menu) titles -->
    <string name="nav_profile">Profile</string>

    <string name="nav_tour">Tours</string>
    <string name="nav_upcoming_event">Upcoming Event</string>
    <string name="nav_help_feedback">Help &amp; Feedback</string>
    <string name="nav_logout">Log Out</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="urdu">Urdu</string>
    <string name="lang">Language</string>
    <string name="desc">Desc</string>
    <string name="title">Title</string>
    <string name="JD">Rs.</string>
    <string name="delete_tour">Delete Tour</string>
    <string name="tour_overview">Tour OverView</string>
    <string name="title_english">Title_English</string>
    <string name="title_arabic">Title_Arabic</string>
    <string name="title_urdu">Title_Urdu</string>
    <string name="helpandfeedback">Help &amp; Feedback</string>
    <string name="publish">Publish</string>
    <string name="create_tour">Create Tour</string>
    <string name="toast_places">please choose atleast 3 places to create a Tour.</string>

    <!-- Strings for the (ActionBarDrawerToggle) -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings for the(Detailed activity) -->
    <string name="cold">"Cold"</string>
    <string name="perfect">"Perfect"</string>
    <string name="hot">"Hot"</string>
    <string name="normal">"Normal"</string>

    <string name="bad_internet">Bad</string>
    <string name="good_internet">Good</string>
    <string name="great_internet">Great</string>
    <string name="okay_internet">Okay</string>

    <string name="alert_rating_hint">"Share Your Experience about this tour"</string>
    <string name="alert_rating_post">Post</string>
    <string name="alert_rating_cancel">Cancel</string>
    <string name="detailed_activity_description">Description</string>
    <string name="detailed_activity_information_about">Information about</string>
    <string name="detailed_activity_cost">Cost</string>
    <string name="detailed_activity_temp">Temp</string>
    <string name="detailed_activity_air_quality">Air quality</string>
    <string name="detailed_activity_internet">Internet</string>
    <string name="detailed_activity_recommendations_for">Recommendations for</string>
    <string name="detailed_activity_season">Season</string>
    <string name="detailed_activity_time">Time</string>
    <string name="detailed_activity_age">Age</string>
    <string name="detailed_activity_estimation">Estimation</string>
    <string name="detailed_activity_location_for">Location for</string>
    <string name="summer_season">Summer</string>
    <string name="winter_season">Winter</string>
    <string name="spring_season">spring</string>
    <string name="autumn_season">autumn</string>
    <string name="day_time">Day</string>
    <string name="night_time">Night</string>
    <string name="detailed_activity_title">Tour Details</string>
    <string name="reviews_comments_dialog">Reviews</string>
    <string name="already_rated">You have already rated this tour!!</string>
    <string name="interests">Select your interests:</string>
    <string name="now">(Now)</string>
    <string name="title_share">An application for tourism in Pakistan</string>
    <string name="using">Share using:</string>
    <string name="recommended">Recommended</string>
    <string name="top_rated">Top Rated</string>
    <string name="emergency">Emergency:</string>
    <string name="ministry_of_tourism">Ministry Of Tourism:</string>
    <string name="contact_us">Contact Us</string>

    <string name="test_tour">You have not selected your interests yet.</string>
    <string name="overview_activity_title">Tour Overview</string>

    <string name="activities_cost">Activities Cost:</string>

    <string name="weather">Weather Info</string>
    <string name="max">High Temp</string>
    <string name="min">Low Temp</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind Speed</string>

    <string name="four_g">4G Available</string>
    <string name="three_g">3G Available</string>
    <string name="two_g">2G Available</string>
    <string name="no_service">No Service</string>

    <string name="cost_popup_title">Cost Details</string>
    <string name="entrance_fees">Entrance fees</string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="overnight_rate">Overnight rate</string>
    <string name="cheap_cost">cheap price</string>
    <string name="average_cost">Average price</string>
    <string name="expensive_cost">Expensive price</string>
    <string name="apply">Apply</string>

    <!-- Clarification Dialog -->
    <string name="clarification_dialog_title">Clarification</string>
    <string name="clarification_dialog_body">&#8226; Default value of <b>Transportation</b> cost/duration was calculated from your current location in that city as a starter point and the desired place as an end point.\n\n&#8226; Default value of <b>Estimated Time</b> was calculated by adding up all the desired place activities time and the transportation time.\n\n&#8226; <b>You Can Customize Both The Etimated Time and Cost of Each Place by Clicking on the Exclamation Mark Beside the (Cost).</b></string>
    <string name="clarification_dialog_checkbox">Dont show this again</string>
    <string name="sleep">Overnight stay</string>

    <string name="places_toolbar_title">Places</string>

    <string name="place_info_toolbar_title">Place Info</string>

    <string name="image_description">photo</string>

    <string name="Places">Places</string>

    <string name="tab_hotels">Hotels</string>

    <string name="tab_restaurants">Restaurants</string>

    <string name="place">Place</string>

    <string name="information_about">Information about</string>

    <string name="place_location">Unknown</string>

    <string name="place_website">Unknown</string>

    <string name="place_phone">Unknwon</string>

    <string name="nearby">Nearby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tour_guider_reg">Guider Registration</string>
    <string name="tourguider">Tour Guider</string>
    <string name="Details">Details</string>
    <string name="Conatct">Contact</string>
    <string name="Language">Language</string>
    <string name="Links">Links</string>
    <string name="Region">Region</string>
    <string name="Website_Link">Website Link</string>
    <string name="Facebook_Link">Facebook Link</string>


    <string name="demo_content1">“Remember that happiness is a way\n of travel, not a destination.”</string>
    <string name="demo_content2">“Travelling in the company of those\n we love is home in motion.“</string>
    <string name="demo_content3">“A good traveler has no fixed plans \nand is not intent on arriving.“</string>
    <string name="demo_content4">“A place is only as good \nas the people in it.“</string>
    <string name="demo_title1">Exploring Places?</string>
    <string name="demo_title2">Planning Tour with Family?</string>
    <string name="demo_title3">Looking for Some Adventerous Place?</string>
    <string name="demo_title4">Places of Your Interest?</string>
    <string name="next">Next</string>

</resources>
