<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <ImageView
       android:id="@+id/bg_img"
       android:src="@drawable/helpandfeedback_background"
       android:layout_width="match_parent"
       android:layout_height="240dp"
       android:scaleType="centerCrop"/>

   <androidx.cardview.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="-15dp"
       android:layout_below="@+id/bg_img"
       android:layout_marginRight="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginStart="16dp"
       android:layout_marginLeft="16dp"
       app:cardCornerRadius="12dp"
       android:elevation="12dp">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="8dp"
          android:paddingBottom="16dp">

         <TextView
             android:id="@+id/contact"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="22dp"
             android:layout_marginLeft="22dp"
             android:fontFamily="@font/cairo"
             android:text="@string/contact_us"
             android:textColor="@color/next_2"
             android:textSize="28sp"
             android:textStyle="bold" />

         <View
             android:id="@+id/line_view"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
             android:layout_below="@id/contact"
             android:layout_marginStart="18dp"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="36dp"
             android:layout_marginRight="36dp"
             android:background="@color/next_2" />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="22dp"
             android:layout_marginStart="22dp"
             android:layout_below="@id/line_view"
             android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imgg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_outlined_telephone" />

            <LinearLayout
                android:id="@+id/lin_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/imgg"
                android:layout_toRightOf="@id/imgg">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:layout_marginTop="4dp"
                   android:textSize="16sp"
                   android:textColor="@android:color/black"
                   android:fontFamily="@font/montserrat_medium"
                   android:text="@string/emergency" />

               <TextView
                   android:id="@+id/emergency_num"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:text="051-9212837"
                   android:textColorHighlight="@android:color/holo_red_dark"
                   android:textColor="@android:color/holo_red_dark"
                   android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_mob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin_1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_outlined_telephone" />

            <LinearLayout
                android:id="@+id/lin_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin_1"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/img_mob"
                android:layout_toRightOf="@id/img_mob"
                android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:layout_marginTop="4dp"
                   android:fontFamily="@font/montserrat_medium"
                   android:text="@string/ministry_of_tourism"
                   android:textColor="@android:color/black"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/mot_num"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:layout_marginTop="8dp"
                   android:text="051-9214027"
                   android:textColor="@color/next_2"
                   android:textColorHighlight="@color/blue_logo"
                   android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/mail_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin_2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_outlined_mail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/lin_2"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/mail_img"
                android:layout_toEndOf="@id/mail_img"
                >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:layout_marginTop="4dp"
                   android:textSize="16sp"
                   android:textColor="@android:color/black"
                   android:fontFamily="@font/montserrat_medium"
                   android:text="@string/ministry_of_tourism" />

               <TextView
                   android:id="@+id/mot_mail"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
                   android:layout_marginStart="12dp"
                   android:layout_marginLeft="12dp"
                   android:textColor="@color/next_2"
                   android:textColorHighlight="@color/next_2"
                   android:fontFamily="@font/montserrat_medium"
                   android:text="info@tourism.gov.pk"

                   android:textSize="16sp" />

            </LinearLayout>

         </RelativeLayout>

      </RelativeLayout>

   </androidx.cardview.widget.CardView>

</RelativeLayout>